--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>p5.js typescript starter with parcel 2</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Neuton&family=Roboto:wght@500&display=swap"
+            rel="stylesheet"
+        />
+        <script type="module" src="./index.ts"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>
-        p5.js typescript starter with parcel 2
-    </title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Neuton&family=Roboto:wght@500&display=swap" rel="stylesheet" />
-    <script type="module" src="./index.ts"></script>
-</head>
-
-<body>
-</body>
-
+    <body></body>
 </html>
